jquery-ui: fix z-index and popup click event handler

--- a/html/jquery/css/jquery-plugins.css
+++ b/html/jquery/css/jquery-plugins.css
@@ -96,7 +96,7 @@ fieldset.ui-fieldset.collapsed>legend::before {
 	position: fixed;
 	top: 0;
 	left: 0;
-	z-index: 10090;
+	z-index: 10120;
 	width: 100%;
 	height: 100%;
 }
@@ -107,7 +107,7 @@ fieldset.ui-fieldset.collapsed>legend::before {
 	width: 100%;
 	height: 100%;
 	padding: 50px;
-	z-index: 10100;
+	z-index: 10130;
 	text-align: center;
 	line-height: 0;
 }
@@ -128,7 +128,7 @@ fieldset.ui-fieldset.collapsed>legend::before {
 	left: 0;
 	height: 100%;
 	width: 100%;
-	z-index: 10010;
+	z-index: 10110;
 }
 #lightbox-imagebox > #lightbox-nav { left: 0; }
 #lightbox-nav a { outline: none;}
@@ -239,7 +239,7 @@ fieldset.ui-fieldset.collapsed>legend::before {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	z-index: 2200;
+	z-index: 2900;
 	zoom: 1;
 }
 
@@ -252,7 +252,7 @@ fieldset.ui-fieldset.collapsed>legend::before {
 	left: 50%;
 	transform: translate(-50%, -50%);
 	-webkit-transform: translate(-50%, -50%);
-	z-index: 2201;
+	z-index: 2901;
 }
 
 .ui-loadmask-load {
@@ -515,13 +515,13 @@ fieldset.ui-fieldset.collapsed>legend::before {
 	right: 0;
 	bottom: 0;
 	left: 0;
-	z-index: 2100;
+	z-index: 10200;
 }
 
 .ui-popup-wrap {
 	display: none;
 	position: absolute;
-	z-index: 2101;
+	z-index: 10210;
 }
 
 .ui-popup-frame {
@@ -613,7 +613,7 @@ fieldset.ui-fieldset.collapsed>legend::before {
 }
 
 .ui-popup-closer {
-	z-index: 2101;
+	z-index: 10210;
 	position: absolute;
 	display: block;
 	top: -8px;
@@ -677,12 +677,13 @@ fieldset.ui-fieldset.collapsed>legend::before {
 	border-top: 1px solid #e5e5e5;
 }
 div.ui-simple-color-picker {
+	background-color: #fff;
 	border: 1px solid #000;
 	position: absolute;
 	left: 0px;
 	top: 0px;
 	padding: 0px;
-	background-color: #fff;
+	z-index: 10300;
 }
 
 div.ui-simple-color-picker ul {
@@ -711,7 +712,7 @@ div.ui-simple-color-picker ul li {
 	margin: 0;
 	padding: 0;
 	letter-spacing: normal;
-	z-index: 2300;
+	z-index: 10900;
 }
 
 .ui-toast-single {
